# matter-smart-sensor-beacons

./: README.md
matter-chip-websocket-client/: chip-tool-ws-client.py  metrics-collect-thingy-53-weather-station.sh
matter-light-switch/: README.md
thingy-53-matter-machine-learning/: CMakeLists.txt  Kconfig  README.md  sample.yaml
thingy-53-matter-machine-learning/configuration/thingy53_nrf5340_cpuapp/: prj.conf  prj_release.conf
thingy-53-matter-machine-learning/configuration/thingy53_nrf5340_cpuapp_ns/: prj.conf
thingy-53-matter-weather-station/: README.rst
